# sheet-extractor

./: .env.example  .gitignore  Makefile  README.md  config.py  docker-compose.yaml  logging.yaml.example  main.py  pyproject.toml  requirements.txt
backend/: .env.example  .gitignore  README.md  config.py  docker-compose.yaml  log.py  main.py  pyproject.toml  requirements.txt
backend/base/: do.py
backend/exceptions/: __init__.py
backend/experiments/: test.ipynb
backend/middleware/: auth.py
backend/models/: __init__.py  image.py  point.py
backend/persistence/database/: __init__.py  config.py  ml.py  s3_file.py  sheet.py
backend/persistence/line/: __init__.py
backend/persistence/s3/: __init__.py  temp.py  tools.py
backend/processor/http/: __init__.py  line.py  public.py
backend/service/: __init__.py  downloader.py  extractor.py
backend/utils/: identifier.py  url.py  validators.py
base/: do.py
database/: docker-compose.yaml
database/sql/: V1.001__init.sql  V1.002__AddFilenameColumnIntoSheet.sql  V1.003__AddConfigTable.sql
persistence/database/: __init__.py
persistence/line/: __init__.py
processor/http/: public.py
service/: extractor.py
utils/: url.py
